--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">PPEEPFinal</string>
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
+    <string name="pPeep">P-PEEP</string>
+    <string name="app_name">PpeepAPP</string>
 </resources>
