--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,17 @@
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
     <string name="pPeep">P-PEEP</string>
-    <string name="app_name">PpeepAPP</string>
+    <!--<string name="app_name">PpeepAPP</string>-->
 
     <string name="log_in_text"><u>Log In Here</u></string>
     <string name="termsCondition"><u>Terms &amp;Conditions</u></string>
     <string name="sign_up_text"><u>Create One</u></string>
+
+
+    <string name="app_name">ppeep-food</string>
+    <string name="FACEBOOK_APP_ID">1103751376499301</string>
+    <string name="ACCOUNT_KIT_CLIENT_TOKEN">2f1f59eb65db63118bd31db1e0d4722c</string>
+
 
 
     <string name="termsConditionText">
