--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="app_name">ppeep-food</string>
     <string name="FACEBOOK_APP_ID">1103751376499301</string>
     <string name="ACCOUNT_KIT_CLIENT_TOKEN">2f1f59eb65db63118bd31db1e0d4722c</string>
+    <string name="title_activity_profile">Profile</string>
+    <string name="action_settings">Settings</string>
 
 
 </resources>
